# gwmemory

./: .buildinfo  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  .travis.yml  LICENSE  README.md  angles.html  example.html  example.ipynb  genindex.html  gwmemory.html  harmonics.html  index.html  objects.inv  optional_requirements.txt  pages_requirements.txt  py-modindex.html  pyproject.toml  qnms.html  requirements.txt  search.html  searchindex.js  setup.py  utils.html  waveforms.html
.github/workflows/: pages.yml  pypi.yml  unit_test.yml
_gh-pages/latest/doctrees/: angles.doctree  comparison.doctree  environment.pickle  example.doctree  gwmemory.doctree  harmonics.doctree  index.doctree  qnms.doctree  utils.doctree  waveforms.doctree
_gh-pages/latest/doctrees/nbsphinx/: comparison.ipynb  example.ipynb
_sources/: example.ipynb.txt  gwmemory.rst.txt  harmonics.rst.txt  qnms.rst.txt  utils.rst.txt
docs/: .buildinfo  Makefile.gh_pages  angles.html  angles.rst  comparison.html  comparison.ipynb  conf.py  example.html  example.ipynb  genindex.html  gwmemory.html  gwmemory.rst  harmonics.html  harmonics.rst  index.html  index.rst  objects.inv  py-modindex.html  qnms.html  qnms.rst  search.html  searchindex.js  utils.html  utils.rst  waveforms.html  waveforms.rst
docs/_sources/: angles.rst.txt  comparison.ipynb.txt  example.ipynb.txt  gwmemory.rst.txt  harmonics.rst.txt  utils.rst.txt  waveforms.rst.txt
docs/_static/: documentation_options.js
examples/: Comparison.html  Comparison.ipynb  GWMemory.html  GWMemory.ipynb
gwmemory/: .version  __init__.py  angles.py  gwmemory.py  harmonics.py  qnms.py  utils.py  waveforms.py
gwmemory/waveforms/: __init__.py  approximant.py  base.py  mwm.py  nr.py  surrogate.py
test/: angles_test.py  harmonics_test.py  waveform_test.py
