[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm[toml]>=3.4.3",
    "wheel",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
write_to = "gwmemory/_version.py"

[project]
name = "gwmemory"
authors = [
    {name = "Colm Talbot", email = "colm.talbot@ligo.org"},
]
description = "Calculate the gravitational-wave memory for arbitrary time series"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dynamic = ["version"]

dependencies = [
    "numpy",
    "scipy",
    "pandas",
    "sympy",
]

[project.optional-dependencies]
dev = [
    "numba",
]
